--- a/Baby/baby/baby.html
+++ b/Baby/baby/baby.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="item">Khối 1</div>
-      <div class="item">Khối 2</div>
-      <div class="item large">Khối 3</div>
+    <div class="flex-container">
+      <div class="flex-item">Khối 1</div>
+      <div class="flex-item">Khối 2</div>
+      <div class="flex-item large">Khối 3</div>
     </div>
   </body>
 </html>
